Bug 544606 - Disabled button text not visible in dark theme on Mac
Use the default color from the OS for Button foreground color similar to
the Button background color. To do this, unset Button color in the
e4-dark_mac css file

--- a/bundles/org.eclipse.ui.themes/css/e4-dark_mac.css
+++ b/bundles/org.eclipse.ui.themes/css/e4-dark_mac.css
@@ -202,5 +202,6 @@ Form > LayoutComposite > LayoutComposite > Button,
 .MPart LayoutComposite > * > LayoutComposite > Section > LayoutComposite > Button,
 .MPartStack.active .MPart LayoutComposite > * > LayoutComposite > Section > LayoutComposite > Button {
     background-color: unset;
+    color: unset;
 }
 
